Change homepage link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AntonGavGav.github.io/My-trips-around-the-world",
+  "homepage": "https://antongavgav.github.io/My-trips-around-the-world",
   "name": "1project_challange",
   "version": "0.1.0",
   "private": true,
